test/controlplane/policies/k8s/v1.22/init.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Node
  metadata:
    annotations:
      kubeadm.alpha.kubernetes.io/cri-socket: unix:///run/containerd/containerd.sock
      node.alpha.kubernetes.io/ttl: "0"
      volumes.kubernetes.io/controller-managed-attach-detach: "true"
    creationTimestamp: "2022-08-03T14:33:46Z"
    labels:
      beta.kubernetes.io/arch: amd64
      beta.kubernetes.io/os: linux
      kubernetes.io/arch: amd64
      kubernetes.io/hostname: policy-control-plane
      kubernetes.io/os: linux
      node-role.kubernetes.io/control-plane: ""
      node-role.kubernetes.io/master: ""
      node.kubernetes.io/exclude-from-external-load-balancers: ""
    name: policy-control-plane
    resourceVersion: "739"
    uid: 778d88db-ad99-4d9b-9579-5987682eaf1b
  spec:
    podCIDR: 10.244.0.0/24
    podCIDRs:
    - 10.244.0.0/24
    providerID: kind://docker/policy/policy-control-plane
    taints:
    - effect: NoSchedule
      key: node-role.kubernetes.io/master
  status:
    addresses:
    - address: 172.18.0.3
      type: InternalIP
    - address: policy-control-plane
      type: Hostname
    allocatable:
      cpu: "32"
      ephemeral-storage: 952244Mi
      hugepages-1Gi: "0"
      hugepages-2Mi: "0"
      memory: 131608772Ki
      pods: "110"
    capacity:
      cpu: "32"
      ephemeral-storage: 952244Mi
      hugepages-1Gi: "0"
      hugepages-2Mi: "0"
      memory: 131608772Ki
      pods: "110"
    conditions:
    - lastHeartbeatTime: "2022-08-03T14:34:39Z"
      lastTransitionTime: "2022-08-03T14:34:39Z"
      message: Cilium is running on this node
      reason: CiliumIsUp
      status: "False"
      type: NetworkUnavailable
    - lastHeartbeatTime: "2022-08-03T14:34:50Z"
      lastTransitionTime: "2022-08-03T14:33:44Z"
      message: kubelet has sufficient memory available
      reason: KubeletHasSufficientMemory
      status: "False"
      type: MemoryPressure
    - lastHeartbeatTime: "2022-08-03T14:34:50Z"
      lastTransitionTime: "2022-08-03T14:33:44Z"
      message: kubelet has no disk pressure
      reason: KubeletHasNoDiskPressure
      status: "False"
      type: DiskPressure
    - lastHeartbeatTime: "2022-08-03T14:34:50Z"
      lastTransitionTime: "2022-08-03T14:33:44Z"
      message: kubelet has sufficient PID available
      reason: KubeletHasSufficientPID
      status: "False"
      type: PIDPressure
    - lastHeartbeatTime: "2022-08-03T14:34:50Z"
      lastTransitionTime: "2022-08-03T14:34:40Z"
      message: kubelet is posting ready status
      reason: KubeletReady
      status: "True"
      type: Ready
    daemonEndpoints:
      kubeletEndpoint:
        Port: 10250
    images:
    - names:
      - quay.io/cilium/cilium@sha256:079baa4fa1b9fe638f96084f4e0297c84dd4fb215d29d2321dcbe54273f63ade
      sizeBytes: 166660061
    - names:
      - docker.io/library/import-2022-05-19@sha256:c363d7be64b689eaa72045ed44383a5fc7123459efc8dd7a6bb9dda64dc6d78c
      - k8s.gcr.io/kube-proxy:v1.22.9
      sizeBytes: 105463291
    - names:
      - k8s.gcr.io/etcd:3.5.0-0
      sizeBytes: 99868722
    - names:
      - docker.io/library/import-2022-05-19@sha256:20d6fca8758f609d79c1be5475e8853d0638939dfd63dd5dbb1de9d8002d5495
      - k8s.gcr.io/kube-apiserver:v1.22.9
      sizeBytes: 74678750
    - names:
      - docker.io/library/import-2022-05-19@sha256:365cc86bcfaf48766348e393f6b43a947094028df6c9e2bd948804280851d630
      - k8s.gcr.io/kube-controller-manager:v1.22.9
      sizeBytes: 67530868
    - names:
      - docker.io/library/import-2022-05-19@sha256:66a8e762e940cabe0c832fb4c9eb34802923b59ae77c839cbdf7d2f4107791d8
      - k8s.gcr.io/kube-scheduler:v1.22.9
      sizeBytes: 53928052
    - names:
      - docker.io/kindest/kindnetd:v20220510-4929dd75
      sizeBytes: 45239873
    - names:
      - docker.io/kindest/local-path-provisioner:v0.0.22-kind.0
      sizeBytes: 17375346
    - names:
      - k8s.gcr.io/coredns/coredns:v1.8.4
      sizeBytes: 13707249
    - names:
      - docker.io/kindest/local-path-helper:v20220512-507ff70b
      sizeBytes: 2859518
    - names:
      - k8s.gcr.io/pause:3.6
      sizeBytes: 301773
    nodeInfo:
      architecture: amd64
      bootID: c7cd173c-f3ec-42d9-afc4-b2b2ca4c34cd
      containerRuntimeVersion: containerd://1.6.4
      kernelVersion: 5.18.13-200.fc36.x86_64
      kubeProxyVersion: v1.22.9
      kubeletVersion: v1.22.9
      machineID: 2607cba09bf24d9e9c674f4ac3a4cf06
      operatingSystem: linux
      osImage: Ubuntu 21.10
      systemUUID: e389ccb2-80ce-412e-8fa7-6d29b496ed5d
- apiVersion: v1
  kind: Node
  metadata:
    annotations:
      kubeadm.alpha.kubernetes.io/cri-socket: unix:///run/containerd/containerd.sock
      node.alpha.kubernetes.io/ttl: "0"
      volumes.kubernetes.io/controller-managed-attach-detach: "true"
    creationTimestamp: "2022-08-03T14:34:11Z"
    labels:
      beta.kubernetes.io/arch: amd64
      beta.kubernetes.io/os: linux
      cilium.io/ci-node: k8s1
      kubernetes.io/arch: amd64
      kubernetes.io/hostname: policy-worker
      kubernetes.io/os: linux
    name: policy-worker
    resourceVersion: "741"
    uid: 21abf46b-bf9a-40d8-a9c0-85ec50869408
  spec:
    podCIDR: 10.244.1.0/24
    podCIDRs:
    - 10.244.1.0/24
    providerID: kind://docker/policy/policy-worker
  status:
    addresses:
    - address: 172.18.0.2
      type: InternalIP
    - address: policy-worker
      type: Hostname
    allocatable:
      cpu: "32"
      ephemeral-storage: 952244Mi
      hugepages-1Gi: "0"
      hugepages-2Mi: "0"
      memory: 131608772Ki
      pods: "110"
    capacity:
      cpu: "32"
      ephemeral-storage: 952244Mi
      hugepages-1Gi: "0"
      hugepages-2Mi: "0"
      memory: 131608772Ki
      pods: "110"
    conditions:
    - lastHeartbeatTime: "2022-08-03T14:34:46Z"
      lastTransitionTime: "2022-08-03T14:34:46Z"
      message: Cilium is running on this node
      reason: CiliumIsUp
      status: "False"
      type: NetworkUnavailable
    - lastHeartbeatTime: "2022-08-03T14:34:51Z"
      lastTransitionTime: "2022-08-03T14:34:11Z"
      message: kubelet has sufficient memory available
      reason: KubeletHasSufficientMemory
      status: "False"
      type: MemoryPressure
    - lastHeartbeatTime: "2022-08-03T14:34:51Z"
      lastTransitionTime: "2022-08-03T14:34:11Z"
      message: kubelet has no disk pressure
      reason: KubeletHasNoDiskPressure
      status: "False"
      type: DiskPressure
    - lastHeartbeatTime: "2022-08-03T14:34:51Z"
      lastTransitionTime: "2022-08-03T14:34:11Z"
      message: kubelet has sufficient PID available
      reason: KubeletHasSufficientPID
      status: "False"
      type: PIDPressure
    - lastHeartbeatTime: "2022-08-03T14:34:51Z"
      lastTransitionTime: "2022-08-03T14:34:51Z"
      message: kubelet is posting ready status
      reason: KubeletReady
      status: "True"
      type: Ready
    daemonEndpoints:
      kubeletEndpoint:
        Port: 10250
    images:
    - names:
      - quay.io/cilium/cilium@sha256:079baa4fa1b9fe638f96084f4e0297c84dd4fb215d29d2321dcbe54273f63ade
      sizeBytes: 166660061
    - names:
      - docker.io/library/import-2022-05-19@sha256:c363d7be64b689eaa72045ed44383a5fc7123459efc8dd7a6bb9dda64dc6d78c
      - k8s.gcr.io/kube-proxy:v1.22.9
      sizeBytes: 105463291
    - names:
      - k8s.gcr.io/etcd:3.5.0-0
      sizeBytes: 99868722
    - names:
      - docker.io/library/import-2022-05-19@sha256:20d6fca8758f609d79c1be5475e8853d0638939dfd63dd5dbb1de9d8002d5495
      - k8s.gcr.io/kube-apiserver:v1.22.9
      sizeBytes: 74678750
    - names:
      - docker.io/library/import-2022-05-19@sha256:365cc86bcfaf48766348e393f6b43a947094028df6c9e2bd948804280851d630
      - k8s.gcr.io/kube-controller-manager:v1.22.9
      sizeBytes: 67530868
    - names:
      - docker.io/library/import-2022-05-19@sha256:66a8e762e940cabe0c832fb4c9eb34802923b59ae77c839cbdf7d2f4107791d8
      - k8s.gcr.io/kube-scheduler:v1.22.9
      sizeBytes: 53928052
    - names:
      - docker.io/kindest/kindnetd:v20220510-4929dd75
      sizeBytes: 45239873
    - names:
      - quay.io/cilium/operator-generic@sha256:bb2a42eda766e5d4a87ee8a5433f089db81b72dd04acf6b59fcbb445a95f9410
      sizeBytes: 18766988
    - names:
      - docker.io/kindest/local-path-provisioner:v0.0.22-kind.0
      sizeBytes: 17375346
    - names:
      - k8s.gcr.io/coredns/coredns:v1.8.4
      sizeBytes: 13707249
    - names:
      - docker.io/kindest/local-path-helper:v20220512-507ff70b
      sizeBytes: 2859518
    - names:
      - k8s.gcr.io/pause:3.6
      sizeBytes: 301773
    nodeInfo:
      architecture: amd64
      bootID: c7cd173c-f3ec-42d9-afc4-b2b2ca4c34cd
      containerRuntimeVersion: containerd://1.6.4
      kernelVersion: 5.18.13-200.fc36.x86_64
      kubeProxyVersion: v1.22.9
      kubeletVersion: v1.22.9
      machineID: c84c01b62ee14f0f8f6cd653e5022e87
      operatingSystem: linux
      osImage: Ubuntu 21.10
      systemUUID: 7e7dec16-a2ba-4360-8788-831957a81d69
- apiVersion: cilium.io/v2
  kind: CiliumNode
  metadata:
    creationTimestamp: "2022-08-03T14:34:37Z"
    generation: 1
    labels:
      beta.kubernetes.io/arch: amd64
      beta.kubernetes.io/os: linux
      kubernetes.io/arch: amd64
      kubernetes.io/hostname: policy-control-plane
      kubernetes.io/os: linux
      node-role.kubernetes.io/control-plane: ""
      node-role.kubernetes.io/master: ""
      node.kubernetes.io/exclude-from-external-load-balancers: ""
    name: policy-control-plane
    ownerReferences:
    - apiVersion: v1
      kind: Node
      name: policy-control-plane
      uid: 778d88db-ad99-4d9b-9579-5987682eaf1b
    resourceVersion: "635"
    uid: 077f75f6-5ec2-4181-8327-5ae5f9fc9659
  spec:
    addresses:
    - ip: 172.18.0.3
      type: InternalIP
    - ip: 10.244.0.13
      type: CiliumInternalIP
    alibaba-cloud: {}
    azure: {}
    encryption: {}
    eni: {}
    health:
      ipv4: 10.244.0.71
    ingress: {}
    ipam:
      podCIDRs:
      - 10.244.0.0/24
- apiVersion: cilium.io/v2
  kind: CiliumNode
  metadata:
    creationTimestamp: "2022-08-03T14:34:44Z"
    generation: 1
    labels:
      beta.kubernetes.io/arch: amd64
      beta.kubernetes.io/os: linux
      cilium.io/ci-node: k8s1
      kubernetes.io/arch: amd64
      kubernetes.io/hostname: policy-worker
      kubernetes.io/os: linux
    name: policy-worker
    ownerReferences:
    - apiVersion: v1
      kind: Node
      name: policy-worker
      uid: 21abf46b-bf9a-40d8-a9c0-85ec50869408
    resourceVersion: "724"
    uid: 58b144ae-c1dd-44e2-8a50-b763ba11c69b
  spec:
    addresses:
    - ip: 172.18.0.2
      type: InternalIP
    - ip: 10.244.1.80
      type: CiliumInternalIP
    alibaba-cloud: {}
    azure: {}
    encryption: {}
    eni: {}
    health:
      ipv4: 10.244.1.64
    ingress: {}
    ipam:
      podCIDRs:
      - 10.244.1.0/24
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2022-08-03T14:33:49Z"
    labels:
      component: apiserver
      provider: kubernetes
    name: kubernetes
    namespace: default
    resourceVersion: "208"
    uid: 0179a832-4713-4f06-9eb6-ee4dc8b0ff92
  spec:
    clusterIP: 10.96.0.1
    clusterIPs:
    - 10.96.0.1
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 6443
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2022-08-03T14:33:49Z"
    labels:
      endpointslice.kubernetes.io/skip-mirror: "true"
    name: kubernetes
    namespace: default
    resourceVersion: "210"
    uid: a9117f78-3fc3-449d-afcb-296d9744d483
  subsets:
  - addresses:
    - ip: 172.18.0.3
    ports:
    - name: https
      port: 6443
      protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 172.18.0.3
    conditions:
      ready: true
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2022-08-03T14:33:49Z"
    generation: 1
    labels:
      kubernetes.io/service-name: kubernetes
    name: kubernetes
    namespace: default
    resourceVersion: "211"
    uid: 8c53b7eb-2e63-4a73-b089-2faf4755f2f6
  ports:
  - name: https
    port: 6443
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
