test/controlplane/policies/k8s/v1.22/state1.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-allow-egress","namespace":"policy1"},"spec":{"egress":[{}],"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2022-08-03T14:34:53Z"
    generation: 1
    name: knp-default-allow-egress
    namespace: policy1
    resourceVersion: "755"
    uid: d8590798-9f8b-4b5c-9c28-d423b7bf8e58
  spec:
    egress:
    - {}
    podSelector: {}
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
