test/controlplane/policies/k8s/v1.22/state2.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-allow-ingress","namespace":"policy2"},"spec":{"ingress":[{}],"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2022-08-03T14:34:53Z"
    generation: 1
    name: knp-default-allow-ingress
    namespace: policy2
    resourceVersion: "761"
    uid: 9413b35c-6cdd-4aa6-9a9d-33c05fbaa5ce
  spec:
    ingress:
    - {}
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
