test/controlplane/policies/k8s/v1.22/state3.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-deny-egress","namespace":"policy3"},"spec":{"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2022-08-03T14:34:54Z"
    generation: 1
    name: knp-default-deny-egress
    namespace: policy3
    resourceVersion: "767"
    uid: 28f3560e-0bd8-4108-a473-9c6ba9db709f
  spec:
    podSelector: {}
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
