test/controlplane/policies/k8s/v1.22/state4.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-deny-ingress","namespace":"policy4"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2022-08-03T14:34:54Z"
    generation: 1
    name: knp-default-deny-ingress
    namespace: policy4
    resourceVersion: "774"
    uid: 0ca0cd9a-d00d-4064-ab62-f64f6a01800b
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
