test/controlplane/policies/k8s/v1.22/state5.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-deny-ingress-egress","namespace":"policy5"},"spec":{"podSelector":{},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2022-08-03T14:34:54Z"
    generation: 1
    name: knp-default-deny-ingress-egress
    namespace: policy5
    resourceVersion: "780"
    uid: 9515aa4c-47e5-41f6-b542-dad4c45cd0cc
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
